--- a/style.css
+++ b/style.css
@@ -45,3 +45,39 @@
   .image {
     margin-top: 30px;
   }
+  /*                   dinks page                */
+.head {
+    text-align: center;
+    border-bottom: 3px solid #ffd200;
+    margin-top: 20px;
+    width: 340px;
+    margin-left: 20px;
+  }
+  .para2 {
+    font-size: 65px;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-left: 15px;
+    margin-top: 8px;
+    padding: 8px;
+    width: 340px;
+  }
+  .imgs {
+    height: 150px;
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
+  }
+  .caption {
+    text-align: center;
+    width: 100%;
+  }
+  .captions{
+      font-weight: 700;
+  }
+  .drink {
+    padding: 5px;
+  }
